--- a/lms-laravel/composer.json
+++ b/lms-laravel/composer.json
@@ -9,7 +9,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/jetstream": "^5.3",
-        "laravel/sanctum": "*",
+        "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.0",
         "livewire/livewire": "^3.6.4"
